add dialogue, onnanokoninaritai